2021-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLStartElement): Use resource-managed memory
        allocator for msl_info->group_info and assure that memory is
        cleared so that empty group does not result in use of
        uninitialized data.  Addresses oss-fuzz 34869
        "graphicsmagick:coder_MSL_fuzzer: Use-of-uninitialized-value in
        MSLEndElement".

        * magick/memory.c (_MagickReallocateResourceLimitedMemory): Round
        up allocation size on small reallocs in order to lessen the number
        of actual reallocs.

2021-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (SVGComment): Re-implement comment callback to be based on
        the managed-memory allocator and avoid excessive use of strlen().
        (SVGCharacters): Re-implement characters callback to to be based
        on the managed-memory allocator and avoid excessive use of
        strlen().  Addresses oss-fuzz 34168
        "graphicsmagick:coder_SVGZ_fuzzer: Timeout in coder_SVGZ_fuzzer".

        * magick/memory.c (_MagickResourceLimitedMemoryGetSizeAttribute):
        New private function to retrieve various integral size values from
        the managed-memory allocator regarding a specified allocation.

        * magick/utility.c (MagickStripString): New function to replace
        'Strip' which is now deprecated.  This version returns the string
        length.

2021-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Magick++/lib/Magick++/{Drawable.h, STL.h}: Use _MSVC_LANG in
        addition to __cplusplus when testing for C++'17 since the
        Microsoft C++ compiler only properly defines __cplusplus if the
        /Zc:__cplusplus switch was provided.

2021-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Magick++/lib/Magick++/STL.h: Support compiling with C++'98
        through C++'17.

        * Magick++/lib/Magick++/Drawable.h: Support compiling with C++'98