@@ -1,3 +1,10 @@
+2021-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/svg.c (GetTransformTokens): Fix massive over-allocation
+        of string due to use of AcquireString() on entire remaining text
+        buffer. Addresses oss-fuzz 35171 "graphicsmagick:coder_SVG_fuzzer:
+        Out-of-memory in coder_SVG_fuzzer".
+
 2021-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/msl.c (MSLStartElement): Use resource-managed memory
